tests/negative/optimizer/div_zero_int.orng
// div_zero_int.orng:6:14: error: divide by 0
//     @div(1, 0)
//             ^
// 
fn main() -> Int {
    @div(1, 0)
}